# maakinohBot

./: .gitignore  CMakeLists.txt  maakinohBot
include/maakinohBot/: application.hpp
include/maakinohBot/models/: chat.hpp  message.hpp  parseable_object.hpp  user.hpp
include/maakinohBot/plugin/: plugin_handler.hpp
include/maakinohBot/telegram/: bot.hpp  http_handler.hpp
opt/: CMakeLists.txt
opt/lua-5.3.0/: CMakeLists.txt
src/maakinohBot/: application.cpp
src/maakinohBot/models/: user.cpp
src/maakinohBot/plugin/: plugin_handler.cpp
src/maakinohBot/telegram/: http_handler.cpp
